upgrade to java 10 and jsf 2.3